--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-database:20.1.0'
 //    implementation 'com.google.firebase:firebase-firestore-ktx:24.10.0'
-    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'// Check for latest version
+    implementation 'com.google.firebase:firebase-database-ktx:20.1.0'
+    implementation 'com.google.firebase:firebase-storage:20.1.0'// Check for latest version
     testImplementation 'junit:junit:4.13.2'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
